# prompt_injection_defender

./: .gitignore  LICENSE  MANIFEST.in  README.md  check.py  pyproject.toml  requirements.txt  test_chatbot.py
data/: adversarial_prompts.json  balanced_prompt_dataset.json  convert_prompts.py  custom_prompt_patterns.json  generate_ds.py  merge.py  prompt_generator.py  prompt_injection_dataset.json  test_data.py
promptinjection_defender/: __init__.py  config.py  domain_defense.py  input_sanitizer.py  output_filter.py
promptinjection_defender/domains/: ecommerce_patterns.json  financial_patterns.json  general_patterns.json  healthcare_patterns.json  semantic_patterns.json
tests/: test_domain_defense.py  test_input_sanitizer.py  test_output_filter.py
