[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "promptinjection-defender"
version = "0.1.0"
description = "A Python package for detecting and mitigating prompt injection in LLM-based chatbots."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name="Damilola Faith Ashiedu", email="faithashiedu9@gmail.com" }
]
keywords = ["prompt injection", "chatbot", "AI security", "LLMs"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=4.1.0",
]

[project.optional-dependencies]
semantic = [
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["promptinjection_defender*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"promptinjection_defender" = ["*.json"]
"promptinjection_defender.domains" = ["*.json"]
